@@ -1,5 +1,8 @@
 2004-06-14  Thomas Fitzsimmons  <fitzsim@redhat.com>
 
+	* jni/gtk-peer/gnu_java_awt_peer_gtk_GtkComponentPeer.c
+	(gtkWidgetDispatchKeyEvent): Change warning message to comment.
+
 	* jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics.c (drawString):
 	Wrap baseline y value in PANGO_PIXELS macro, rather than simply
 	dividing by PANGO_SCALE.  Call gdk_flush before leaving GDK
